src/objects/Standardized_Country__c.object
<CustomObject>
    <description>Object container for ISO and or FIPS standardized country code. Used as a parent for non standard country descriptors.</description>
    <fields>
        <fullName>FIPS_10_4__c</fullName>
        <label>FIPS 10-4</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_3166_1_alpha_2__c</fullName>
        <label>ISO 3166-1 alpha-2</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_3166_1_alpha_3__c</fullName>
        <label>ISO 3166-1 alpha-3</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISO_3166_1_numeric__c</fullName>
        <label>ISO 3166-1 numeric</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Standardized Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ISO_3166_1_alpha_2__c</columns>
        <columns>ISO_3166_1_alpha_3__c</columns>
        <columns>ISO_3166_1_numeric__c</columns>
        <columns>FIPS_10_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ISO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standardized Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>